--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ plugins {
     id 'java'
 }
 
-apply from : "./production/build.gradle"
+//apply from : "./docker/UsersService/build.gradle"
+//apply from : "./docker/production/build.gradle"
 apply plugin : 'java'
 apply plugin : 'application'
 apply plugin: "com.github.johnrengelman.shadow"
@@ -38,14 +39,21 @@ dependencies {
     compile group: 'io.dropwizard', name: 'dropwizard-jdbi', version: '1.2.2'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.8-dmr'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+}
+
+shadowJar {
+    mergeServiceFiles()
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
 }
 
 run {
-    args "server", "/config/config.yml"
+    args "server", "${projectDir}/config/config.yml"
 }
 
 wrapper  {
     gradleVersion = "4.0"
 }
+
+task stage (dependsOn: ['shadowJar', 'clean'])
+shadowJar.mustRunAfter clean
